fontend ajax submit done & laravel validation Rquest & laravel passport

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,7 @@
 //@import 'variables';
 //Variables
 @import 'abstracts/_variables';
+@import 'components/_validations';
 
 // Bootstrap
 //@import '~bootstrap/scss/bootstrap';
