--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
+span.validation {
+  color: red;
+  display: block;
+}
+
 /**
  * Foundation for Sites by ZURB
  * Version 6.5.3
